<resources>
    <string name="app_name">PopularMovies</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="movie">Trending</string>
    <string name="sort_by">Sort by:</string>


    <string name="API_KEY"><!--   YOUR API KEY HERE --></string>

    <string name="connection_error">Failed to connect. Please try again later.</string>
    <string name="header_text_main">Here are the movies based on your selection</string>
    <string name="refresh">Refresh</string>
    <string name="favorites">Favorites</string>
    <string name="rating">Rating:</string>
    <string name="release">Release:</string>
    <string name="genre">Genre:</string>
    <string name="favorites_header">Here are your list of favorite movies</string>
    <string name="reviews">Reviews</string>
    <string name="plot">Plot</string>
    <string name="could_not_find_reviews">Could not find reviews</string>
    <string name="error_trailers">Could not find trailers for the movie</string>
    <string name="trailers_label">Trailers</string>

</resources>